# flux-runtime-wen

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  pyproject.toml
docs/: design.md
examples/: Suanjing.flux
for-fleet/: health-check-2026-04-12_171951.json
src/flux_runtime_wen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/flux_wen/: __init__.py  bridge_adapter.py  cli.py  context.py  glyph.py  iching.py  iching_opcode.py  interpreter.py  poetry.py  vm.py
src/flux_wen/vocabulary/: __init__.py  confucian.ese  math.ese  military.ese
tests/: test_interpreter_wen.py
